--- a/css/styles.css
+++ b/css/styles.css
@@ -5,4 +5,15 @@ body {
 	background:#333;
 }
 
+.wrap {
+	width:800px;
+	height:auto;
+	margin:0 auto;
+}
+
+#threedee {
+	width:100%;
+	height:800px;
+	background:#777;
+}
 
