--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
 body {
 	margin:0;
 	padding:0;
-	overflow:hidden;
-	background:#333;
 }
 
 .wrap {
@@ -13,7 +11,7 @@ body {
 
 #threedee {
 	width:100%;
-	height:800px;
-	background:#777;
+	height:500px;
+	background:#ddd;
 }
 
